<resources>
    <string name="app_name">rfurrer-FeelsBook</string>
    <string name="feelings_history">Feelings History</string>
    <string name="sadness">Sadness</string>
    <string name="anger">Anger</string>
    <string name="surprise">Surprise</string>
    <string name="joy">Joy</string>
    <string name="love">Love</string>
    <string name="fear">Fear</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Enter your comment here</string>
    <string name="add_feeling">Add Feeling</string>
    <string name="edit_feeling">Edit Feeling</string>
    <string name="stats">Stats</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">Okay</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
</resources>
