<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/feelingsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feelings_history" />

    <ListView
        android:id="@+id/feelings_list"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

    </ListView>


    <Button
        android:id="@+id/joyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joy" />

    <Button
        android:id="@+id/sadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sadness" />

    <Button
        android:id="@+id/fearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fear" />

    <Button
        android:id="@+id/loveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/love" />

    <Button
        android:id="@+id/angerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anger" />

    <Button
        android:id="@+id/supriseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surprise" />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats" />

</LinearLayout>